deploy/mall-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mall
    version: v2
  name: mall-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall
      version: v2
  template:
    metadata:
      labels:
        app: mall
        version: v2
    spec:
      containers:
        - image: registry.boms.com:8088/micro-service/mall:v1
          imagePullPolicy: IfNotPresent
          name: mall
          ports:
            - containerPort: 7000
              protocol: TCP
