deploy/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: products
    version: v2
  name: products-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
      version: v2
  template:
    metadata:
      labels:
        app: products
        version: v2
    spec:
      containers:
        - image: registry.boms.com:8088/micro-service/products:v1
          imagePullPolicy: IfNotPresent
          name: products
          ports:
            - containerPort: 7000
              protocol: TCP
