deploy/mall-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mall
    version: v1
  name: mall-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall
      version: v1
  template:
    metadata:
      labels:
        app: mall
        version: v1
    spec:
      containers:
        - image: registry.boms.com:8088/micro-service/mall:v1
          imagePullPolicy: IfNotPresent
          name: mall
          ports:
            - containerPort: 7000
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mall
  name: mall
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
      nodePort: 31004
  selector:
    app: mall
  type: NodePort


---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: scores
    version: v1
  name: scores-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scores
      version: v1
  template:
    metadata:
      labels:
        app: scores
        version: v1
    spec:
      containers:
        - image: registry.boms.com:8088/micro-service/scores:v1
          imagePullPolicy: IfNotPresent
          name: scores
          ports:
            - containerPort: 7000
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: scores
  name: scores
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
      nodePort: 31007
  selector:
    app: scores
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: recommend
    version: v1
  name: recommend-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommend
      version: v1
  template:
    metadata:
      labels:
        app: recommend
        version: v1
    spec:
      containers:
        - image: registry.boms.com:8088/micro-service/recommend:v1
          imagePullPolicy: IfNotPresent
          name: recommend
          ports:
            - containerPort: 7000
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: recommend
  name: recommend
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
      nodePort: 31001
  selector:
    app: recommend
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: products
    version: v1
  name: products-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
      version: v1
  template:
    metadata:
      labels:
        app: products
        version: v1
    spec:
      containers:
        - image: registry.boms.com:8088/micro-service/products:v1
          imagePullPolicy: IfNotPresent
          name: products
          ports:
            - containerPort: 7000
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: products
  name: products
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
      nodePort: 31002
  selector:
    app: products
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: discount
    version: v1
  name: discount-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discount
      version: v1
  template:
    metadata:
      labels:
        app: discount
        version: v1
    spec:
      containers:
        - image: registry.boms.com:8088/micro-service/discount:v1
          imagePullPolicy: IfNotPresent
          name: discount
          ports:
            - containerPort: 7000
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: discount
  name: discount
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
      nodePort: 31003
  selector:
    app: discount
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sales
    version: v1
  name: sales-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales
      version: v1
  template:
    metadata:
      labels:
        app: sales
        version: v1
    spec:
      containers:
        - image: registry.boms.com:8088/micro-service/sales:v1
          imagePullPolicy: IfNotPresent
          name: sales
          ports:
            - containerPort: 7000
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: sales
  name: sales
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
      nodePort: 31005
  selector:
    app: sales
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stock
    version: v1
  name: stock-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock
      version: v1
  template:
    metadata:
      labels:
        app: stock
        version: v1
    spec:
      containers:
        - image: registry.boms.com:8088/micro-service/stock:v1
          imagePullPolicy: IfNotPresent
          name: stock
          ports:
            - containerPort: 7000
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: stock
  name: stock
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
      nodePort: 31006
  selector:
    app: stock
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-v1
  labels:
    app: users
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
      version: v1
  template:
    metadata:
      labels:
        app: users
        version: v1
    spec:
      containers:
        - name: users
          image: registry.boms.com:8088/micro-service/users:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7000
---

apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    app: users
spec:
  ports:
    - port: 7000
      name: http
      protocol: TCP
      nodePort: 31008
  selector:
    app: users
  type: NodePort
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-v1
  labels:
    app: mongodb
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
      version: v1
  template:
    metadata:
      labels:
        app: mongodb
        version: v1
    spec:
      containers:
        - name: mongodb
          image: registry.boms.com:8088/micro-service/mongodb:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
    - port: 27017
      name: mongo
  selector:
    app: mongodb
