deploy/fox-vs-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: discount
spec:
  hosts:
    - "discount.mesh.svc.cluster.local"
  http:
    - match:
        - headers:
            cookie:
              exact: "user=fox"
      route:
        - destination:
            host: "discount.fox.svc.cluster.local"
    - route:
        - destination:
            host: "discount.mesh.svc.cluster.local"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: products
spec:
  hosts:
    - "products.mesh.svc.cluster.local"
  http:
    - match:
        - sourceLabels:
            env: fox
      route:
        - destination:
            host: "products.fox.svc.cluster.local"
    - route:
        - destination:
            host: "products.mesh.svc.cluster.local"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: favorites
spec:
  hosts:
    - "favorites.mesh.svc.cluster.local"
  http:
    - match:
        - sourceLabels:
            env: fox
      route:
        - destination:
            host: "favorites.fox.svc.cluster.local"

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: discount
spec:
  host: "discount.fox.svc.cluster.local"
  subsets:
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: products
spec:
  host: "products.fox.svc.cluster.local"
  subsets:
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: favorites
spec:
  host: "favorites.fox.svc.cluster.local"
  subsets:
    - name: v1
      labels:
        version: v1
