deploy/recommend-jason-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommend
spec:
  hosts:
    - "recommend"
  http:
    - match:
        - headers:
            cookie:
              exact: "user=jason"
      route:
        - destination:
            host: "recommend"
            subset: v2
            port:
              number: 7000
    - route:
        - destination:
            host: "recommend"
            subset: v1
            port:
              number: 7000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommend
spec:
  host: recommend
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
